kde4libs (4:4.2.0-3) UNRELEASED; urgency=low

  +++ Changes by Armin Berres:

  * Update patch 08_add_debian_build_type.diff to also set QT_NO_DEBUG and
    sync 09_disable_debug_messages_if_not_explicitly_enabled.diff with
    upstream revision 916186.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 27 Jan 2009 23:35:58 +0100

kde4libs (4:4.2.0-2) experimental; urgency=low

  +++ Changes by Modestas Vainius:

  * Tweak libplasma3 description.
  * Steal r917133 (as 00_917133_qreal_portability_fix.diff) from upstream svn
    to fix FTBFS on armel.
  * Deprecate external Qt symbols in libplasma3 symbols template
    (Closes: #513133).
  * Get up-to-date with kdelibs 4.2.0 tag: add 00_917014_kde4.2.0_tag.diff
    patch (plasma security issue).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 27 Jan 2009 01:00:17 +0200

kde4libs (4:4.2.0-1) experimental; urgency=low

  * New upstream release.

  - kfmclient is no longer needed (Closes: #508601).

  +++ Changes by Modestas Vainius:

  * Resync patches:
    - 01_http_cache_cleaner_branch_881252.diff - remove, stolen from upstream.
    - 01_kross_version_11_r838337.diff - remove, stolen from unstream.
    - 08_add_debian_build_type.diff - refresh.
    - 13_qt4_designer_plugins_path.diff - refresh.
    - 14_hardcode_ptm_device.diff - refresh.
    - 15_kfreebsd_support.diff - refresh.
    - 16_debian_menu.diff - refresh.
    - 17_findservicebydesktoppath_try_realfilepath.diff - refresh.
    - 18_always_set_cmake_policy.diff - remove, obsolete.
    - 19_findqt4_optional_x11_pthread.diff - refresh.
    - 20_use_dejavu_as_default_font.diff - refresh.
    - 22_hack_in_etc_kde4_in_kstandarddirs.diff - refresh.
  * Update cmake (build-)dependency to 2.6.2:
    - depend on 2.6.2-3~ due to cmake common config lib support;
    - 23_2.6.2_use_common_cmake_config_dir.diff - enable support for common
      cmake config dir with cmake 2.6.2 (debian patched version);